changed project final

--- a/deliveries/david/final-project/backend/data.yaml
+++ b/deliveries/david/final-project/backend/data.yaml
@@ -1,266 +1,21 @@
 games:
-  '112558':
-    find: __________
+  1b1c9342-0cc6-4af4-bfc3-534680e2aa29:
+    find: luralsight
     result: ''
-    tries: 0
-    word: Pluralsight
-  '143372':
-    find: ________ ________ ___________
+    tries: 2
+    word: pluralsight
+  6bc6699f-c343-4371-8874-17be4dd96717:
+    find: lura
     result: ''
-    tries: 0
-    word: Powerful Stories iHeartMedia
-  '184276':
-    find: _ ______
+    tries: 2
+    word: alura
+  865c8cfd-16b7-482d-bc9c-a3a247fb9635:
+    find: oshin_kanrih
     result: ''
-    tries: 0
-    word: O Reilly
-  '200316':
-    find: ______ _____
-    result: ''
-    tries: 0
-    word: Hoshin Kanri
-  '205173':
-    find: _________ __
-    result: ''
-    tries: 0
-    word: Drupalize me
-  '206313':
-    find: ______ ___ ______
-    result: ''
-    tries: 0
-    word: Driven by Impact
-  '249221':
-    find: ____
-    result: ''
-    tries: 0
-    word: Alura
-  '255121':
-    find: ________ ________ _______ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Konica Minolta
-  '260124':
-    find: _____ _____ _____ _______ _______
-    result: ''
-    tries: 0
-    word: Gemba Walk Data driven mindset
-  '291416':
-    find: ________ ___________ ______
-    result: ''
-    tries: 0
-    word: Business Complexity Points
-  '295869':
-    find: _______ _____ ______
-    result: ''
-    tries: 0
-    word: Mindset Data Driven
-  '311395':
-    find: ____ ________ ______________
-    result: ''
-    tries: 0
-    word: Lean Digital Transformation
-  '314476':
-    find: ________ ________ _______ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Konica Minolta
-  '338828':
-    find: ________ ________ _______ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Konica Minolta
-  '385335':
-    find: ____ _____ ____
-    result: ''
-    tries: 0
-    word: Jira Poka Yoke
-  '413999':
-    find: ______ _____
-    result: ''
-    tries: 0
-    word: Hoshin Kanri
-  '421913':
-    find: __________
-    result: ''
-    tries: 0
-    word: Pluralsight
-  '428558':
-    find: ____ ________ ______________
-    result: ''
-    tries: 0
-    word: Lean Digital Transformation
-  '439583':
-    find: ________ ________ ____
-    result: ''
-    tries: 0
-    word: Powerful Stories VIVO
-  '441739':
-    find: ________ ________ ____
-    result: ''
-    tries: 0
-    word: Powerful Stories VIVO
-  '455550':
-    find: ________ ___________ ______
-    result: ''
-    tries: 0
-    word: Business Complexity Points
-  '470470':
-    find: ________ ________
-    result: ''
-    tries: 0
-    word: Lifelong Learning
-  '486738':
-    find: _______ _____ ______
-    result: ''
-    tries: 0
-    word: Mindset Data Driven
-  '506699':
-    find: ________ ________ _____
-    result: ''
-    tries: 0
-    word: Powerful Stories Cielo
-  '558114':
-    find: ________ ________ ______ ______
-    result: ''
-    tries: 0
-    word: Powerful Stories Porto Seguro
-  '585194':
-    find: _______ _____ ______
-    result: ''
-    tries: 0
-    word: Mindset Data Driven
-  '596521':
-    find: ________ ________ ____
-    result: ''
-    tries: 0
-    word: Powerful Stories VIVO
-  '600949':
-    find: ________ ________ ______
-    result: ''
-    tries: 0
-    word: Powerful Stories Raizen
-  '614931':
-    find: _________ __________
-    result: ''
-    tries: 0
-    word: Financial Management
-  '615857':
-    find: ____ ________ ______________
-    result: ''
-    tries: 0
-    word: Lean Digital Transformation
-  '618115':
-    find: ______ _____
-    result: ''
-    tries: 0
-    word: Hoshin Kanri
-  '619615':
-    find: _____ _____ _____ _______ _______
-    result: ''
-    tries: 0
-    word: Gemba Walk Data driven mindset
-  '621806':
-    find: ______ ___ ______
-    result: ''
-    tries: 0
-    word: Driven by Impact
-  '627744':
-    find: ____________ ___ _____ __________
-    result: ''
-    tries: 0
-    word: Introduction to Lean Leadership
-  '637327':
-    find: ________ ________ _________ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Bradesco Seguros
-  '651438':
-    find: ___ ___________ _______
-    result: ''
-    tries: 0
-    word: Our Unfinished Journey
-  '688218':
-    find: ________ ________ _____
-    result: ''
-    tries: 0
-    word: Powerful Stories Cielo
-  '717799':
-    find: ________ ________ _____
-    result: ''
-    tries: 0
-    word: Powerful Stories Cielo
-  '742754':
-    find: _________ __________
-    result: ''
-    tries: 0
-    word: Financial Management
-  '762587':
-    find: ____ _____ ____
-    result: ''
-    tries: 0
-    word: Jira Poka Yoke
-  '763855':
-    find: ________ ___________ ______
-    result: ''
-    tries: 0
-    word: Business Complexity Points
-  '782682':
-    find: _____ _____ _____ _______ _______
-    result: ''
-    tries: 0
-    word: Gemba Walk Data driven mindset
-  '795056':
-    find: _ ______
-    result: ''
-    tries: 0
-    word: O Reilly
-  '820525':
-    find: ________ ________ ____
-    result: ''
-    tries: 0
-    word: Powerful Stories VIVO
-  '845712':
-    find: ____ ________ ____
-    result: ''
-    tries: 0
-    word: Lean Startup Week
-  '846847':
-    find: ________ ___________ ______
-    result: ''
-    tries: 0
-    word: Business Complexity Points
-  '866363':
-    find: ________ ________ _________ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Bradesco Seguros
-  '866650':
-    find: ____ ________ ____
-    result: ''
-    tries: 0
-    word: Lean Startup Week
-  '911808':
-    find: _______ _____ ______
-    result: ''
-    tries: 0
-    word: Mindset Data Driven
-  '942552':
-    find: ________ ________ ____
-    result: ''
-    tries: 0
-    word: Powerful Stories VIVO
-  '945148':
-    find: _______ ____ _________
-    result: ''
-    tries: 0
-    word: Journey and Ambiguity
-  '949245':
-    find: ________ ________ _____
-    result: ''
-    tries: 0
-    word: Powerful Stories Cielo
-  undefined:
-    find: ________ ________ _______ _______
-    result: ''
-    tries: 0
-    word: Powerful Stories Konica Minolta
+    tries: 2
+    word: hoshin kanri
+  93c317d7-49b7-4cc7-b6fd-ef9c056b244e:
+    find: lura
+    result: lose
+    tries: 6
+    word: alura
